# lightining

./: README.rst  pyproject.toml
lightining/: main.py
logs/mnist/version_0/: metrics.csv
logs/mnist/version_0/checkpoints/: epoch=5-step=1284.ckpt
logs/mnist/version_1/checkpoints/: epoch=5-step=1284.ckpt
logs/mnist/version_2/: metrics.csv
logs/mnist/version_2/checkpoints/: epoch=5-step=1284.ckpt
tests/: test_lightining.py
