[tool.poetry]
name = "lightining"
version = "0.1.0"
description = ""
authors = ["kamal-shrestha <kamalandshrestha@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.0"
lightning = "^2022.10.25"
torchmetrics = "^0.11.4"
torchvision = "^0.15.1"
matplotlib = "^3.7.1"
pandas = "^1.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
